--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -4,6 +4,6 @@
 {% block content %}
 <div class="form-container">
     <h2>Profile</h2>
-    <p><strong>Username:</strong> {{ current_user.username }}</p>
+    <p><strong>Username:</strong> {{ user }}</p>
     </div>
 {% endblock %}
